<resources>
    <string name="app_name">Restock</string>
    <string name="activity_login_email_hint">Email</string>
    <string name="activity_login_password_hint">Password</string>
    <string name="activity_login_login_button">Sign In</string>
    <string name="login_activity_signup_button">Don\'t have an account yet? Sign Up.</string>
    <string name="activity_login_email_error">Enter valid email address</string>
    <string name="activity_login_email_password_error">Enter the password</string>
    <string name="facebook_app_id" translatable="false">1943884392593066</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb1943884392593066</string>
    <string name="activity_login_verify_email_toast">Please verify your email address</string>
    <string name="activity_sign_up_signup_button">Sign Up</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main" translatable="false">MainActivity</string>
    <string name="activity_main_title">Stock</string>
    <string name="error_out_of_stock">Out of stock</string>
    <string name="msg_activity_login_or">Or</string>
    <string name="title_drawer_profile">Profile</string>
    <string name="title_drawer_sign_out">Sign out</string>
    <string name="title_drawer_settings">Settings</string>
    <string name="title_drawer_terms">Terms and privacy policy</string>
    <string name="title_drawer_history">History</string>
    <string name="title_fragment_product_description">Description</string>
    <string name="title_fragment_product_goes">Goes with</string>
    <string name="title_fragment_product_grape">Grape</string>
    <string name="title_fragment_product_year">Year of origin</string>
    <string name="title_product_quantity">Quantity</string>
    <string name="action_product_next">OK</string>
    <string name="action_product_cancel">Cancel</string>
    <string name="message_product_added">Product added to your Shopping Cart</string>
    <string name="message_cart_empty">Your Shopping Cart is empty</string>
    <string name="tittle_total">Total:</string>
    <string name="action_continue">Continue</string>
    <string name="title_activity_map_order" translatable="false">Choose your location</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_sign_up">Sign up</string>
    <string name="title_activity_profile_information">Profile</string>
    <string name="title_activity_history">History</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_cart">Shopping cart</string>
    <string name="activity_map_order_current_location">default</string>
    <string name="activity_map_order_map_location">default</string>
    <string name="text_status_order_detail_dialog">default</string>
    <string name="recycler_detail_history_product_name">default</string>
    <string name="recycler_detail_history_product_quantity">default</string>
    <string name="recycler_detail_history_product_total">default</string>
    <string name="recyclerview_history_item_detail">default</string>
    <string name="recyclerview_product_item_more">default</string>
    <string name="recyclerview_product_item_add">default</string>
    <string name="buttonText_activity_profile_information_update">default</string>
    <string name="nameText_activity_profile_information">default</string>
    <string name="phoneNumberText_activity_profile_information">default</string>

</resources>
