<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group>
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile_in"
            android:title="@string/title_drawer_profile" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_history"
            android:title="@string/title_drawer_history" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_profile_out"
            android:title="@string/title_drawer_sign_out" />
    </group>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/title_drawer_settings" />
            <item
                android:id="@+id/nav_privacy"
                android:icon="@drawable/ic_privacy"
                android:title="@string/title_drawer_terms" />
        </menu>
    </item>

</menu>
