<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context="com.lovera.diego.restock.LoginActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/loginActivityTextInputLayoutEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/loginActivityTextInputEditEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/activity_login_email_hint"
                android:inputType="textEmailAddress" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/loginActivityTextInputLayoutPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/loginActivityTextInputEditPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/activity_login_password_hint"
                android:inputType="textPassword" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/loginActivityLoginButton"
            style="@style/ColorButtonRipple"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/activity_login_login_button" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            android:text="OR" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="vertical"
            android:padding="4dp">

            <com.facebook.login.widget.LoginButton
                android:id="@+id/login_button_facebook"
                style="@style/FacebookLoginButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:elevation="2dp"
                android:gravity="center"
                android:paddingBottom="12dp"
                android:paddingLeft="10dp"
                android:paddingTop="12dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="vertical">

            <com.shobhitpuri.custombuttons.GoogleSignInButton
                android:id="@+id/login_button_google2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:text="Continue with Google"
                app:isDarkTheme="false" />
        </LinearLayout>

        <Button
            android:id="@+id/loginActivitySignUpButton"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:elevation="0dp"
            android:text="@string/login_activity_signup_button"
            android:textColor="@color/primaryLightColor"
            android:textSize="12sp" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
